# ecn_arpro

init_project/: CMakeLists.txt
init_project/include/: sticks.h
init_project/src/: find_number.cpp  rock_paper_scissors.cpp  sticks.cpp
